seperate entity from domain to daa layer and create view model dependencies

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,4 +40,6 @@ android {
 dependencies {
     implementation project(":core")
     implementation project(":data")
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 }
