--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,8 @@ buildscript {
     ext.dagger_version = "2.28.3"
     ext.preference = "1.1.0"
 
+    ext.nav_version = "2.4.0-alpha01"
+
     ext.hilt_version = "2.36"
     repositories {
         google()
@@ -37,6 +39,7 @@ allprojects {
     repositories {
         google()
         mavenCentral()
+        maven { url 'https://jitpack.io' }
     }
 }
 
