--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ buildscript {
     ext.kotlin_version = "1.4.31"
     ext.retrofit_version = "2.9.0"
     ext.nav_version = "2.3.0-rc01"
-    ext.room_version = "2.2.6"
+    ext.room_version = "2.3.0"
     ext.lifecycle_version = "2.2.0"
     ext.glide_version = "4.11.0"
     ext.gson_version = "2.8.6"
@@ -18,7 +18,7 @@ buildscript {
     ext.lottieVersion = "3.4.1"
     ext.dagger_version = "2.28.3"
     ext.preference = "1.1.0"
-
+    ext.paging_version = "3.0.1"
     ext.nav_version = "2.4.0-alpha01"
 
     ext.hilt_version = "2.36"
