--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = "1.5.21"
+    ext.kotlin_version = '1.6.21'
     ext.retrofit_version = "2.9.0"
     ext.nav_version = "2.3.0-rc01"
     ext.room_version = "2.3.0"
@@ -29,13 +29,13 @@ buildscript {
     ext.truthVersion = '1.1.2'
     ext.androidCoreTestVersion = '2.1.0'
 
-    ext.hilt_version = "2.36"
+    ext.hilt_version = '2.40.1'
     repositories {
         google()
         mavenCentral()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.1.1"
+        classpath 'com.android.tools.build:gradle:8.1.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
         // NOTE: Do not place your application dependencies here; they belong
