--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ buildscript {
     ext.kotlin_version = '1.6.21'
     ext.retrofit_version = "2.9.0"
     ext.nav_version = "2.3.0-rc01"
-    ext.room_version = "2.3.0"
+    ext.room_version = "2.4.0-alpha03"
     ext.lifecycle_version = "2.2.0"
     ext.glide_version = "4.11.0"
     ext.gson_version = "2.8.6"
